sign upのページの追加

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -2,16 +2,19 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>login</title>
+    <title>sign-up</title>
 </head>
 <body>
 <form action="/">
     <label for="user_name">
+        ユーザー名：
         <input id="user_name" type="text">
     </label>
     <label for="password">
+        パスワード：
         <input id="password" type="password">
     </label>
+    <button>登録</button>
 </form>
 </body>
 </html>
