ログイン処理の作成

--- a/template/sign_up.html
+++ b/template/sign_up.html
@@ -2,9 +2,10 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>sign-up</title>
+    <title>ユーザー登録</title>
 </head>
 <body>
+<h1>ユーザー登録</h1>
 <form action="/sign-up" method="post">
     <div>
         <label for="userName">
