--- a/template/home.html
+++ b/template/home.html
@@ -12,5 +12,9 @@
 <a href="/sign-in">ログイン</a>
 <a href="/sign-up">ユーザー登録</a>
 {{end}}
+
+<form action="/csv">
+    <button type="submit">CSVダウンロード</button>
+</form>
 </body>
 </html>
